<resources>
    <string name="app_name">رفادة</string>


    <string name="buttonM">متبرع</string>
    <string name="buttonP">حاج</string>
    <string name="note"> ملاحظة: قيمة السهم الواحد 10 ريال</string>
    <string name="numOfArrowT">عدد الأسهم </string>
    <string name="priceT">المبلغ </string>
    <string name="nextB">التالي </string>
    <string name="showPB">عرض المبلغ </string>
    <string name="aboutB">عنا </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="find">جد طريقك لأقرب غذاء صحي!</string>
    <string name="Cancle">إلغاء</string>
    <string name="Confirm">تأكيد</string>
    <string name="CVV">الرمز</string>
    <string name="EXP">الانتهاء</string>
    <string name="Name">الاسم</string>
    <string name="Card">رقم البطاقة</string>
    <string name="please">من فضلك ادخل بياناتك!</string>
    <string name="about">    رِفادة هو تطبيق لمساعدة    المتبرعين من جميع أنحاء العالم للمشاركة في خدمة حجاج بيت الله الحرام لتوفير أطعمة صحية باستخدام وسائل الدفع الإلكترونية
</string>
</resources>
